--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rengginangblog</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- Ubuntu Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -14,27 +21,196 @@
       crossorigin="anonymous"
     />
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"
-  ></script>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand bg-dark navbar-dark">
-      <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-    </nav>
-
+    <div class="container">
+      <nav
+        class="navbar navbar-expand-md fixed-top bg-dark navbar-dark"
+        id="barnav"
+      >
+        <a href="#" class="navbar-brand px-md-3">rengginangblog</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="toggleMobileMenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="toggleMobileMenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">about</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="container-fluid" style="margin-top: 80px">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+        pulvinar tortor non quam tempus condimentum. Class aptent taciti
+        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        Mauris dolor orci, pulvinar ornare finibus in, volutpat suscipit nunc.
+        Fusce interdum orci ante, non rhoncus dui tempus at. In hac habitasse
+        platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Mauris tempus, nunc et hendrerit
+        consectetur, tortor leo eleifend orci, id pulvinar magna eros eu massa.
+        Aliquam a metus non arcu porta hendrerit non id est. Maecenas ac
+        eleifend sem. Quisque vel nunc vel nisi varius aliquam. Praesent et
+        rutrum sapien, ac lacinia dolor. Quisque sit amet mi id velit dictum
+        pellentesque. Pellentesque eleifend elit ex, sit amet fringilla nisi
+        vulputate lobortis. Pellentesque non lacus nec tellus placerat commodo
+        eu ac augue. Curabitur eget malesuada turpis. Nulla venenatis tempus
+        diam, quis tristique nunc porta non. Sed placerat nisi nec facilisis
+        consectetur. Proin ut mi est. Nulla id dictum dolor. Mauris cursus
+        tellus ornare elementum iaculis. Quisque commodo, justo id hendrerit
+        malesuada, neque massa convallis lorem, sed varius justo dui quis enim.
+        Nullam varius pharetra lorem, nec placerat neque commodo sit amet. In
+        odio lectus, molestie venenatis odio ac, sagittis placerat tellus. Sed
+        vehicula lacinia nunc. Sed mi nibh, bibendum eu scelerisque tincidunt,
+        imperdiet nec neque. Donec vehicula quis velit eget eleifend. Vestibulum
+        dapibus quam ut lacinia bibendum. Donec et eleifend urna, ac dapibus
+        nisl. Ut felis diam, tempor quis enim non, vehicula commodo nisl.
+        Aliquam ullamcorper est nec dolor tincidunt, a euismod augue congue.
+        Curabitur turpis metus, mollis vitae hendrerit sit amet, rhoncus a quam.
+        Donec non blandit arcu. Donec tincidunt purus vitae tellus dapibus, ac
+        mollis nisi molestie. Aenean vestibulum turpis quis arcu interdum
+        molestie. Aenean sed urna non velit efficitur volutpat. Ut felis turpis,
+        fringilla quis ultricies a, ultrices eu justo. Quisque pellentesque
+        ultrices orci porttitor suscipit. Aliquam eu libero leo. Maecenas sit
+        amet felis dui. Suspendisse faucibus, tortor et lobortis ornare, eros ex
+        tincidunt dolor, in ultrices enim leo vitae sem. Nullam dignissim cursus
+        pulvinar. Morbi nisi nulla, tempus ac feugiat eget, molestie sit amet
+        elit. Nullam in elit efficitur, tristique velit a, bibendum urna.
+        Pellentesque lectus tortor, porttitor nec interdum non, imperdiet eget
+        ligula. Mauris sagittis tempus tincidunt. Curabitur ligula arcu,
+        porttitor quis sem vel, laoreet elementum ante. Pellentesque vulputate
+        id elit id gravida. Pellentesque habitant morbi tristique senectus et
+        netus et malesuada fames ac turpis egestas. Donec convallis arcu
+        facilisis bibendum imperdiet. Donec ultrices non nulla nec molestie.
+        Vivamus elementum enim diam, ultricies cursus est porta id. Praesent
+        ullamcorper justo sem. Curabitur congue tempor fermentum. Etiam non
+        pretium lorem. Fusce facilisis urna id tristique bibendum. Maecenas
+        finibus erat ipsum, sit amet cursus arcu tincidunt a. Ut efficitur a
+        purus eget placerat. Donec accumsan sapien vitae metus ultrices, at
+        vestibulum quam pulvinar. In eu orci sapien. Praesent pretium viverra
+        porta. Donec egestas, justo ut finibus fermentum, est ex rhoncus orci,
+        et scelerisque justo ligula in sapien. Sed dolor nibh, mattis in
+        pulvinar id, lobortis eget dolor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+        pulvinar tortor non quam tempus condimentum. Class aptent taciti
+        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        Mauris dolor orci, pulvinar ornare finibus in, volutpat suscipit nunc.
+        Fusce interdum orci ante, non rhoncus dui tempus at. In hac habitasse
+        platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Mauris tempus, nunc et hendrerit
+        consectetur, tortor leo eleifend orci, id pulvinar magna eros eu massa.
+        Aliquam a metus non arcu porta hendrerit non id est. Maecenas ac
+        eleifend sem. Quisque vel nunc vel nisi varius aliquam. Praesent et
+        rutrum sapien, ac lacinia dolor. Quisque sit amet mi id velit dictum
+        pellentesque. Pellentesque eleifend elit ex, sit amet fringilla nisi
+        vulputate lobortis. Pellentesque non lacus nec tellus placerat commodo
+        eu ac augue. Curabitur eget malesuada turpis. Nulla venenatis tempus
+        diam, quis tristique nunc porta non. Sed placerat nisi nec facilisis
+        consectetur. Proin ut mi est. Nulla id dictum dolor. Mauris cursus
+        tellus ornare elementum iaculis. Quisque commodo, justo id hendrerit
+        malesuada, neque massa convallis lorem, sed varius justo dui quis enim.
+        Nullam varius pharetra lorem, nec placerat neque commodo sit amet. In
+        odio lectus, molestie venenatis odio ac, sagittis placerat tellus. Sed
+        vehicula lacinia nunc. Sed mi nibh, bibendum eu scelerisque tincidunt,
+        imperdiet nec neque. Donec vehicula quis velit eget eleifend. Vestibulum
+        dapibus quam ut lacinia bibendum. Donec et eleifend urna, ac dapibus
+        nisl. Ut felis diam, tempor quis enim non, vehicula commodo nisl.
+        Aliquam ullamcorper est nec dolor tincidunt, a euismod augue congue.
+        Curabitur turpis metus, mollis vitae hendrerit sit amet, rhoncus a quam.
+        Donec non blandit arcu. Donec tincidunt purus vitae tellus dapibus, ac
+        mollis nisi molestie. Aenean vestibulum turpis quis arcu interdum
+        molestie. Aenean sed urna non velit efficitur volutpat. Ut felis turpis,
+        fringilla quis ultricies a, ultrices eu justo. Quisque pellentesque
+        ultrices orci porttitor suscipit. Aliquam eu libero leo. Maecenas sit
+        amet felis dui. Suspendisse faucibus, tortor et lobortis ornare, eros ex
+        tincidunt dolor, in ultrices enim leo vitae sem. Nullam dignissim cursus
+        pulvinar. Morbi nisi nulla, tempus ac feugiat eget, molestie sit amet
+        elit. Nullam in elit efficitur, tristique velit a, bibendum urna.
+        Pellentesque lectus tortor, porttitor nec interdum non, imperdiet eget
+        ligula. Mauris sagittis tempus tincidunt. Curabitur ligula arcu,
+        porttitor quis sem vel, laoreet elementum ante. Pellentesque vulputate
+        id elit id gravida. Pellentesque habitant morbi tristique senectus et
+        netus et malesuada fames ac turpis egestas. Donec convallis arcu
+        facilisis bibendum imperdiet. Donec ultrices non nulla nec molestie.
+        Vivamus elementum enim diam, ultricies cursus est porta id. Praesent
+        ullamcorper justo sem. Curabitur congue tempor fermentum. Etiam non
+        pretium lorem. Fusce facilisis urna id tristique bibendum. Maecenas
+        finibus erat ipsum, sit amet cursus arcu tincidunt a. Ut efficitur a
+        purus eget placerat. Donec accumsan sapien vitae metus ultrices, at
+        vestibulum quam pulvinar. In eu orci sapien. Praesent pretium viverra
+        porta. Donec egestas, justo ut finibus fermentum, est ex rhoncus orci,
+        et scelerisque justo ligula in sapien. Sed dolor nibh, mattis in
+        pulvinar id, lobortis eget dolor.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+        pulvinar tortor non quam tempus condimentum. Class aptent taciti
+        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        Mauris dolor orci, pulvinar ornare finibus in, volutpat suscipit nunc.
+        Fusce interdum orci ante, non rhoncus dui tempus at. In hac habitasse
+        platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Mauris tempus, nunc et hendrerit
+        consectetur, tortor leo eleifend orci, id pulvinar magna eros eu massa.
+        Aliquam a metus non arcu porta hendrerit non id est. Maecenas ac
+        eleifend sem. Quisque vel nunc vel nisi varius aliquam. Praesent et
+        rutrum sapien, ac lacinia dolor. Quisque sit amet mi id velit dictum
+        pellentesque. Pellentesque eleifend elit ex, sit amet fringilla nisi
+        vulputate lobortis. Pellentesque non lacus nec tellus placerat commodo
+        eu ac augue. Curabitur eget malesuada turpis. Nulla venenatis tempus
+        diam, quis tristique nunc porta non. Sed placerat nisi nec facilisis
+        consectetur. Proin ut mi est. Nulla id dictum dolor. Mauris cursus
+        tellus ornare elementum iaculis. Quisque commodo, justo id hendrerit
+        malesuada, neque massa convallis lorem, sed varius justo dui quis enim.
+        Nullam varius pharetra lorem, nec placerat neque commodo sit amet. In
+        odio lectus, molestie venenatis odio ac, sagittis placerat tellus. Sed
+        vehicula lacinia nunc. Sed mi nibh, bibendum eu scelerisque tincidunt,
+        imperdiet nec neque. Donec vehicula quis velit eget eleifend. Vestibulum
+        dapibus quam ut lacinia bibendum. Donec et eleifend urna, ac dapibus
+        nisl. Ut felis diam, tempor quis enim non, vehicula commodo nisl.
+        Aliquam ullamcorper est nec dolor tincidunt, a euismod augue congue.
+        Curabitur turpis metus, mollis vitae hendrerit sit amet, rhoncus a quam.
+        Donec non blandit arcu. Donec tincidunt purus vitae tellus dapibus, ac
+        mollis nisi molestie. Aenean vestibulum turpis quis arcu interdum
+        molestie. Aenean sed urna non velit efficitur volutpat. Ut felis turpis,
+        fringilla quis ultricies a, ultrices eu justo. Quisque pellentesque
+        ultrices orci porttitor suscipit. Aliquam eu libero leo. Maecenas sit
+        amet felis dui. Suspendisse faucibus, tortor et lobortis ornare, eros ex
+        tincidunt dolor, in ultrices enim leo vitae sem. Nullam dignissim cursus
+        pulvinar. Morbi nisi nulla, tempus ac feugiat eget, molestie sit amet
+        elit. Nullam in elit efficitur, tristique velit a, bibendum urna.
+        Pellentesque lectus tortor, porttitor nec interdum non, imperdiet eget
+        ligula. Mauris sagittis tempus tincidunt. Curabitur ligula arcu,
+        porttitor quis sem vel, laoreet elementum ante. Pellentesque vulputate
+        id elit id gravida. Pellentesque habitant morbi tristique senectus et
+        netus et malesuada fames ac turpis egestas. Donec convallis arcu
+        facilisis bibendum imperdiet. Donec ultrices non nulla nec molestie.
+        Vivamus elementum enim diam, ultricies cursus est porta id. Praesent
+        ullamcorper justo sem. Curabitur congue tempor fermentum. Etiam non
+        pretium lorem. Fusce facilisis urna id tristique bibendum. Maecenas
+        finibus erat ipsum, sit amet cursus arcu tincidunt a. Ut efficitur a
+        purus eget placerat. Donec accumsan sapien vitae metus ultrices, at
+        vestibulum quam pulvinar. In eu orci sapien. Praesent pretium viverra
+        porta. Donec egestas, justo ut finibus fermentum, est ex rhoncus orci,
+        et scelerisque justo ligula in sapien. Sed dolor nibh, mattis in
+        pulvinar id, lobortis eget dolor.
+      </p>
+    </div>
   </body>
 </html>
