add profile page

--- a/blog.html
+++ b/blog.html
@@ -28,32 +28,40 @@
   </head>
   <body>
     <!-- Navbar -->
-    <section class="header">
-      <div class="container">
-        <nav class="navbar navbar-expand-md fixed-top ms-auto">
-          <a href="index.html" class="navbar-brand px-3" style="color: white;">rengginangblog</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#toggleMobileMenu"
-            aria-controls="toggleMobileMenu"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="toggleMobileMenu">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a href="blog.html" class="px-3 nav-link" style="color: white;" >blog</a>
-              </li class="nav-item">
-              <li><a href="about.html" class="px-3 nav-link" style="color: white;">about</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </section>
-
+    <div class="container">
+      <nav class="navbar navbar-expand-md fixed-top ms-auto">
+        <a href="index.html" style="color: white" class="navbar-brand px-3"
+          >rengginangblog</a
+        >
+        <button
+          class="navbar-toggler border-0"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#toggleMobileMenu"
+          aria-controls="toggleMobileMenu"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon border-0"></span>
+        </button>
+        <div
+          class="border-0 col-2 collapse navbar-collapse"
+          id="toggleMobileMenu"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="blog.html" class="px-3 nav-link" style="color: white"
+                >blog</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="px-3 nav-link" style="color: white"
+                >about</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </body>
 </html>
