--- a/index.html
+++ b/index.html
@@ -29,88 +29,42 @@
   </head>
   <body>
     <!-- Navbar -->
-    <section class="header" id="header">
-      <div class="container">
-        <nav class="navbar navbar-expand-md  fixed-top ms-auto">
-          <a href="index.html" style="color: white;" class="navbar-brand px-3">rengginangblog</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#toggleMobileMenu"
-            aria-controls="toggleMobileMenu"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="toggleMobileMenu">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a href="blog.html" class="px-3 nav-link" style="color: white;">blog</a>
-              </li class="nav-item">
-              <li><a href="about.html" class="px-3 nav-link" style="color: white;">about</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </section>
-
-    <!-- Homepage -->
-    <div class="container-fluid" style="margin-top: 60px">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-        pulvinar tortor non quam tempus condimentum. Class aptent taciti
-        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-        Mauris dolor orci, pulvinar ornare finibus in, volutpat suscipit nunc.
-        Fusce interdum orci ante, non rhoncus dui tempus at. In hac habitasse
-        platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et
-        ultrices posuere cubilia curae; Mauris tempus, nunc et hendrerit
-        consectetur, tortor leo eleifend orci, id pulvinar magna eros eu massa.
-        Aliquam a metus non arcu porta hendrerit non id est. Maecenas ac
-        eleifend sem. Quisque vel nunc vel nisi varius aliquam. Praesent et
-        rutrum sapien, ac lacinia dolor. Quisque sit amet mi id velit dictum
-        pellentesque. Pellentesque eleifend elit ex, sit amet fringilla nisi
-        vulputate lobortis. Pellentesque non lacus nec tellus placerat commodo
-        eu ac augue. Curabitur eget malesuada turpis. Nulla venenatis tempus
-        diam, quis tristique nunc porta non. Sed placerat nisi nec facilisis
-        consectetur. Proin ut mi est. Nulla id dictum dolor. Mauris cursus
-        tellus ornare elementum iaculis. Quisque commodo, justo id hendrerit
-        malesuada, neque massa convallis lorem, sed varius justo dui quis enim.
-        Nullam varius pharetra lorem, nec placerat neque commodo sit amet. In
-        odio lectus, molestie venenatis odio ac, sagittis placerat tellus. Sed
-        vehicula lacinia nunc. Sed mi nibh, bibendum eu scelerisque tincidunt,
-        imperdiet nec neque. Donec vehicula quis velit eget eleifend. Vestibulum
-        dapibus quam ut lacinia bibendum. Donec et eleifend urna, ac dapibus
-        nisl. Ut felis diam, tempor quis enim non, vehicula commodo nisl.
-        Aliquam ullamcorper est nec dolor tincidunt, a euismod augue congue.
-        Curabitur turpis metus, mollis vitae hendrerit sit amet, rhoncus a quam.
-        Donec non blandit arcu. Donec tincidunt purus vitae tellus dapibus, ac
-        mollis nisi molestie. Aenean vestibulum turpis quis arcu interdum
-        molestie. Aenean sed urna non velit efficitur volutpat. Ut felis turpis,
-        fringilla quis ultricies a, ultrices eu justo. Quisque pellentesque
-        ultrices orci porttitor suscipit. Aliquam eu libero leo. Maecenas sit
-        amet felis dui. Suspendisse faucibus, tortor et lobortis ornare, eros ex
-        tincidunt dolor, in ultrices enim leo vitae sem. Nullam dignissim cursus
-        pulvinar. Morbi nisi nulla, tempus ac feugiat eget, molestie sit amet
-        elit. Nullam in elit efficitur, tristique velit a, bibendum urna.
-        Pellentesque lectus tortor, porttitor nec interdum non, imperdiet eget
-        ligula. Mauris sagittis tempus tincidunt. Curabitur ligula arcu,
-        porttitor quis sem vel, laoreet elementum ante. Pellentesque vulputate
-        id elit id gravida. Pellentesque habitant morbi tristique senectus et
-        netus et malesuada fames ac turpis egestas. Donec convallis arcu
-        facilisis bibendum imperdiet. Donec ultrices non nulla nec molestie.
-        Vivamus elementum enim diam, ultricies cursus est porta id. Praesent
-        ullamcorper justo sem. Curabitur congue tempor fermentum. Etiam non
-        pretium lorem. Fusce facilisis urna id tristique bibendum. Maecenas
-        finibus erat ipsum, sit amet cursus arcu tincidunt a. Ut efficitur a
-        purus eget placerat. Donec accumsan sapien vitae metus ultrices, at
-        vestibulum quam pulvinar. In eu orci sapien. Praesent pretium viverra
-        porta. Donec egestas, justo ut finibus fermentum, est ex rhoncus orci,
-        et scelerisque justo ligula in sapien. Sed dolor nibh, mattis in
-        pulvinar id, lobortis eget dolor.
-      </p>
-    
+    <div class="container">
+      <nav class="navbar navbar-expand-md fixed-top ms-auto">
+        <a href="index.html" style="color: white" class="navbar-brand px-3"
+          >rengginangblog</a
+        >
+        <button
+          class="navbar-toggler border-0"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#toggleMobileMenu"
+          aria-controls="toggleMobileMenu"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon border-0"></span>
+        </button>
+        <div
+          class="border-0 col-2 collapse navbar-collapse"
+          id="toggleMobileMenu"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="blog.html" class="px-3 nav-link" style="color: white"
+                >blog</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="px-3 nav-link" style="color: white"
+                >about</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
+    <!-- Homepage -->
+    <div class="container-fluid" style="margin-top: 60px"></div>
   </body>
 </html>
