--- a/about.html
+++ b/about.html
@@ -28,57 +28,53 @@
   </head>
   <body>
     <!-- Navbar -->
-    <div class="container">
-      <nav class="navbar navbar-expand-md fixed-top ms-auto">
-        <a href="index.html" style="color: white" class="navbar-brand px-3"
-          >rengginangblog</a
-        >
-        <button
-          class="navbar-toggler border-0"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#toggleMobileMenu"
-          aria-controls="toggleMobileMenu"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon border-0"></span>
-        </button>
-        <div
-          class="border-0 col-2 collapse navbar-collapse"
-          id="toggleMobileMenu"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="blog.html" class="px-3 nav-link" style="color: white"
-                >blog</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="about.html" class="px-3 nav-link" style="color: white"
-                >about</a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <nav class="navbar navbar-expand-md fixed-top ms-auto">
+      <a href="index.html" style="color: white" class="navbar-brand px-3"
+        >rengginangblog</a
+      >
+      <button
+        class="navbar-toggler border-0"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#mobileMenu"
+        aria-controls="mobileMenu"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon border-0"></span>
+      </button>
+      <div class="border-0 col-2 collapse navbar-collapse" id="mobileMenu">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="blog.html" class="px-3 nav-link" style="color: white"
+              >blog</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="px-3 nav-link" style="color: white"
+              >about</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
     <!-- Profile -->
-    <div class="container" style="margin-top: 100px">
-      <div class="card mx-5 my-5 px-5 py-5 rounded shadow back">
+    <div class="container-fluid" style="margin-top: 70px">
+      <div class="card px-4 py-4 rounded shadow back">
         <div class="row">
           <div class="card-body col-md-4">
             <img
               src="img/catikuyo.jpg"
               class="img-fluid card-img rounded-circle"
-              alt=""
-              srcset=""
             />
           </div>
           <div class="col-md-8">
-            <div class="ml-2 m-5">
-              <p>Hello my name is yukidream, this is my personal blog and my first project when learning bootstrap. now im currently learning HTML,CSS,Javascript,and Rust</p>
-              <p></p>
+            <div class="mx-4 my-4">
+              <div class="row">
+                <div class="col-md-5">
+                  <h1>yukidream</h1>
+                </div>
+              </div>
             </div>
           </div>
         </div>
