--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       >
         <span class="navbar-toggler-icon border-0"></span>
       </button> -->
+      <!-- Navbar Button -->
       <div class="container">
         <input
           class="label-check"
