--- a/index.html
+++ b/index.html
@@ -4,64 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rengginangblog</title>
+    <title>dreamyuki</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Ubuntu Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top">
-      <a href="index.html"class="navbar-brand text-white px-md-3 px-sm-3"
-        >rengginangblog</a
-      >
-      <button
-        class="navbar-toggler border-0 bg-light"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mobileMenu"
-        aria-controls="mobileMenu"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon border-0"></span>
-      </button>
-      <div class="border-0 col-2 px-3 collapse navbar-collapse" id="mobileMenu">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="blog.html" class="nav-link text-white"  
-              >blog</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link text-white" 
-              >about</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
     <!-- Homepage -->
-    <div class="container-fluid" style="margin-top: 60px">
-      <h1>Hi</h1>
+    <div >
+      <p>still work in progress :)</p>
     </div>
   </body>
 </html>
